...
                  mainAxisAlignment: MainAxisAlignment.start,
                  children: [
                    Padding(
                      padding: const EdgeInsets.only(
                          top: 16, left: 37, right: 37, bottom: 0),
                      child: Text(
                        'Select Your workout',
                        overflow: TextOverflow.ellipsis,
                        textAlign: TextAlign.center,
                        maxLines: 2,
                        style: TextStyle(
                          color: Colors.black,
                          fontFamily: 'CircularStd',
...

              Navigator.of(context).pop();
              setState(() {});
            });
          }
        },
        tooltip: 'Confirm',
        child: const Icon(Icons.check),
      ),
    );
  }
}

